observable/kubefiles/hellogw.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    group: quarkus-observable
    version: latest
  name: quarkus-observable-demo
  namespace: vlc-quarkus-observable
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      name: quarkus-observable-demo
      group: quarkus-observable
      version: latest
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
        kiali.io/runtimes: quarkus
        prometheus.io/path: /metrics
        prometheus.io/port: '8080'
        prometheus.io/scheme: http
        prometheus.io/scrape: 'true'
      labels:
        name: quarkus-observable-demo
        app: quarkus-observable-demo
        group: quarkus-observable
        version: latest
    spec:
      containers:
        - name: quarkus-observable-demo
          image: quay.io/jzuriaga/quarkus-observable-demo:latest
          imagePullPolicy: Always
          ports:
          - containerPort: 8080
            name: http
          livenessProbe:
            httpGet:
              path: /health/live
              port: http
              scheme: HTTP
          readinessProbe:
            httpGet:
              path: /health/ready
              port: http
              scheme: HTTP
