observable/kubefiles/hellosrv-11.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    group: quarkus-observable
  name: quarkus-observable-server
  namespace: vlc-quarkus-observable
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      name: quarkus-observable-server-11
      group: quarkus-observable
  template:
    metadata:
      annotations:
        kiali.io/runtimes: quarkus
        prometheus.io/path: /metrics
        prometheus.io/port: '8081'
        prometheus.io/scheme: http
        prometheus.io/scrape: 'true'
      labels:
        name: quarkus-observable-server-11
        group: quarkus-observable
        version: 11
    spec:
      containers:
        - name: quarkus-observable-server
          image: quay.io/jzuriaga/quarkus-observable-server:11
          imagePullPolicy: Always
          ports:
          - containerPort: 8081
            name: http
          livenessProbe:
            httpGet:
              path: /health/live
              port: http
              scheme: HTTP
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /health/ready
              port: http
              scheme: HTTP
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
