observable/kubefiles/hellogw.service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    group: quarkus-observable
  name: quarkus-observable-demo-service
  namespace: vlc-quarkus-observable
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: http
  selector:
    app: quarkus-observable-demo
  type: LoadBalancer
