observable/kubefiles/hellosrv.service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    group: quarkus-observable
  name: quarkus-observable-server-service
  namespace: vlc-quarkus-observable
spec:
  ports:
  - name: http
    port: 8081
    protocol: TCP
    targetPort: http
  selector:
    app: quarkus-observable-server
  type: LoadBalancer
