observable/kubefiles/hellogw.route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    group: quarkus-observable
  name: quarkus-observable-demo-route
  namespace: vlc-quarkus-observable
spec:
  port:
    targetPort: http
  to:
    kind: Service
    name: quarkus-observable-demo-service
    weight: 100
  tls:
    termination: edge
  wildcardPolicy: None
